push full site structure

--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
+<!-- <base href="/Users/alycesalatenna/Desktop/squirly-website/"> -->
 <!DOCTYPE html>
-<base href="/Users/alycesalatenna/Desktop/squirly-website/">
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Squirly<br>Comedian | Fisherman | Podcaster</title>
-
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
@@ -49,7 +48,7 @@
             <p class="hero-subtitle">Comedian | Fisherman | Podcaster</p>
         </div>
         <div class="header-right">
-            <a href="https://www.instagram.com/squirly1" target="_blank" class="social-link">
+            <a href="https://www.instagram.com/squirldog1" target="_blank" class="social-link">
                 <img src="pictures/icons/instagram-4.png" alt="Instagram" class="social-icon">
             </a>
             <a href="https://www.facebook.com/Squirldog1" target="_blank" class="social-link">
