Commited to changes watch me, latest news, videos and bloe

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- <base href="/Users/alycesalatenna/Desktop/squirly-website/"> -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -69,10 +68,10 @@
 
 
     <!-- Main Content -->
-    <section class="main-content">
+     <!-- <section class="main-content">
         <div class="container">
             <div class="content-grid">
-                <!-- Watch Me Section -->
+               Watch Me Section 
                 <div class="content-section">
                     <h2>WATCH ME</h2>
                     <div class="video-placeholder">
@@ -83,9 +82,9 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
-                <!-- Latest News Section -->
+                <!-- Latest News Section 
                 <div class="content-section">
                     <h2>LATEST NEWS</h2>
                     <div class="news-content">
@@ -98,7 +97,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Next Show Section
     <section class="next-show">
@@ -135,7 +134,7 @@
         </div>
     </section>
 
-    <!-- Videos Section -->
+    <!-- Videos Section 
     <section id="videos" class="videos">
         <div class="container">
             <h2>Videos</h2>
@@ -147,7 +146,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Blog Section
     <section id="blog" class="blog">
