Trying to workout the 404 issue

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                     </div>
                 </div>
                 
-                <form class="contact-form" method="POST" action="send.php">
+                <!-- <form class="contact-form" method="POST" action="send.php">
                     <div class="form-group">
                         <label for="name">Name</label>
                         <input type="text" id="name" name="name" placeholder="Your Name" required>
@@ -209,7 +209,7 @@
                         <textarea id="message" name="message" placeholder="Your Message" rows="5" required></textarea>
                     </div>
                     <button type="submit" class="submit-btn">Send Message</button>
-                </form>
+                </form> -->
             </div>
         </div>
     </section>
