--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Squirly<br>Comedian | Fisherman | Podcaster</title>
+  <title>Squirly - Comedian | Fisherman | Podcaster</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
@@ -39,89 +39,31 @@
         </div>
     </nav>
 
-<!-- Sticky Header -->
-<header class="sticky-header">
-    <div class="sticky-header-content">
-        <div class="header-left">
-            <h1 class="hero-title">Squirly</h1>
-            <p class="hero-subtitle">Comedian | Fisherman | Podcaster</p>
+    <!-- Sticky Header -->
+    <header class="sticky-header">
+        <div class="sticky-header-content">
+            <div class="header-left">
+                <h1 class="hero-title">Squirly</h1>
+                <p class="hero-subtitle">Comedian | Fisherman | Podcaster</p>
+            </div>
+            <div class="header-right">
+                <a href="https://www.instagram.com/squirldog1" target="_blank" class="social-link">
+                    <img src="pictures/icons/instagram-4.png" alt="Instagram" class="social-icon">
+                </a>
+                <a href="https://www.facebook.com/Squirldog1" target="_blank" class="social-link">
+                    <img src="pictures/icons/facebook-2.png" alt="Facebook" class="social-icon">
+                </a>
+                <a href="https://open.spotify.com/show/3qWExqwFpP2sn7GbhwexcD?si=7b6bc306053541c2" target="_blank" class="social-link">
+                    <img src="pictures/icons/spotify.png" alt="Podcast" class="social-icon">
+                </a>
+            </div>
         </div>
-        <div class="header-right">
-            <a href="https://www.instagram.com/squirldog1" target="_blank" class="social-link">
-                <img src="pictures/icons/instagram-4.png" alt="Instagram" class="social-icon">
-            </a>
-            <a href="https://www.facebook.com/Squirldog1" target="_blank" class="social-link">
-                <img src="pictures/icons/facebook-2.png" alt="Facebook" class="social-icon">
-            </a>
-            <a href="https://open.spotify.com/show/3qWExqwFpP2sn7GbhwexcD?si=7b6bc306053541c2" target="_blank" class="social-link">
-                <img src="pictures/icons/spotify.png" alt="Podcast" class="social-icon">
-            </a>
-        </div>
-    </div>
-</header>
-
+    </header>
 
     <!-- Hero Section with Image -->
     <section class="hero">
         <!-- This section only has the background image -->
     </section>
-
-
-    <!-- Main Content -->
-     <!-- <section class="main-content">
-        <div class="container">
-            <div class="content-grid">
-               Watch Me Section 
-                <div class="content-section">
-                    <h2>WATCH ME</h2>
-                    <div class="video-placeholder">
-                        <div class="video-content">
-                            <p>This channel is coming soon!</p>
-                            <div class="video-controls">
-                                <button class="play-button">▶</button>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
-
-                <!-- Latest News Section 
-                <div class="content-section">
-                    <h2>LATEST NEWS</h2>
-                    <div class="news-content">
-                        <article class="news-item">
-                            <h3>Upcoming Show</h3>
-                            <p>Stay tuned for the latest updates on upcoming performances and comedy shows.</p>
-                            <span class="news-date">Coming Soon</span>
-                        </article>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
-
-    <!-- Next Show Section
-    <section class="next-show">
-        <div class="container">
-            <div class="show-card">
-                <div class="show-date">
-                    <span class="date-text">JULY DATES</span>
-                </div>
-                <div class="show-details">
-                    <h2>MY NEXT SHOW</h2>
-                    <div class="show-info">
-                        <div class="show-venue">
-                            <h3>Froth Comedy Presents</h3>
-                            <p>Rory Love and Daniel Delby 17th of July</p>
-                        </div>
-                        <div class="show-time">
-                            <span class="time">6pm</span>
-                        </div>
-                    </div>
-                    <a href="#" class="show-link">Book Tickets</a>
-                </div>
-            </div>
-        </div>
-    </section>  -->
 
     <!-- About Section -->
     <section id="about" class="about">
@@ -133,34 +75,6 @@
             </div>
         </div>
     </section>
-
-    <!-- Videos Section 
-    <section id="videos" class="videos">
-        <div class="container">
-            <h2>Videos</h2>
-            <div class="video-grid">
-                <div class="video-item">
-                    <div class="video-thumbnail">
-                        <p>Video content coming soon!</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
-
-    <!-- Blog Section
-    <section id="blog" class="blog">
-        <div class="container">
-            <h2>Blog</h2>
-            <div class="blog-grid">
-                <article class="blog-post">
-                    <h3>Welcome to the New Site</h3>
-                    <p>Stay tuned for updates, behind-the-scenes content, and more!</p>
-                    <span class="blog-date">June 2025</span>
-                </article>
-            </div>
-        </div>
-    </section>  -->
 
     <!-- Contact Section -->
     <section id="contact" class="contact">
@@ -194,22 +108,6 @@
                         </div>
                     </div>
                 </div>
-                
-                <!-- <form class="contact-form" method="POST" action="send.php">
-                    <div class="form-group">
-                        <label for="name">Name</label>
-                        <input type="text" id="name" name="name" placeholder="Your Name" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="email" id="email" name="email" placeholder="Your Email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="message">Message</label>
-                        <textarea id="message" name="message" placeholder="Your Message" rows="5" required></textarea>
-                    </div>
-                    <button type="submit" class="submit-btn">Send Message</button>
-                </form> -->
             </div>
         </div>
     </section>
@@ -221,6 +119,35 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script>
+        // Mobile menu toggle
+        const hamburger = document.querySelector('.hamburger');
+        const navMenu = document.querySelector('.nav-menu');
+
+        hamburger.addEventListener('click', () => {
+            hamburger.classList.toggle('active');
+            navMenu.classList.toggle('active');
+        });
+
+        // Close menu when clicking on a link
+        document.querySelectorAll('.nav-link').forEach(n => n.addEventListener('click', () => {
+            hamburger.classList.remove('active');
+            navMenu.classList.remove('active');
+        }));
+
+        // Smooth scrolling for anchor links
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                const target = document.querySelector(this.getAttribute('href'));
+                if (target) {
+                    target.scrollIntoView({
+                        behavior: 'smooth',
+                        block: 'start'
+                    });
+                }
+            });
+        });
+    </script>
 </body>
 </html>
