push hero picture change

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                     <a href="#home" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#about" class="nav-link">About</a>
+                    <a href="#about" class="nav-link">About Me</a>
                 </li>
                 <li class="nav-item">
                     <a href="#videos" class="nav-link">Videos</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#blog" class="nav-link">Blog</a>
+                    <a href="#gigs" class="nav-link">Gigs</a>
                 </li>
                 <li class="nav-item">
                     <a href="#contact" class="nav-link">Contact</a>
@@ -40,7 +40,6 @@
         </div>
     </nav>
 
-    <!-- Sticky Header -->
     <header class="sticky-header">
         <div class="sticky-header-content">
             <div class="header-left">
@@ -61,9 +60,9 @@
         </div>
     </header>
 
-    <!-- Hero Section with Image -->
-    <section class="hero">
-        <!-- This section only has the background image -->
+    <!-- Hero Section with Oasis Image -->
+    <section class="hero-section">
+        <img src="pictures/oasis1.jpg" alt="Oasis" class="hero-image">
     </section>
 
     <!-- About Section -->
@@ -73,20 +72,15 @@
             <div class="about-content">
             <p>G'day Big Horses, I'm Squirly. Originally from Exmouth, where the fish are big, the beers are cold, and the blokes don't wear shoes — even at weddings. The missus says I have to at least wear thongs at ours…</p>
 
-            <p>I kicked off my comedy career at the triple j Raw Comedy and somehow landed in the National Final. Since then, I've been taking my stand-up around WA, from city venues to towns where the pub doubles as a post office and a childcare centre.</p>
+            <p>I kicked off my comedy career at the triple j Raw Comedy and somehow landed in the National Final. Since then, I've been taking my standup around Australia, from city venues to towns where the pub doubles as a post office and a childcare centre.</p>
 
             <p>Which works for me — I can go fishing and ponder existential dread.</p>
 
-            <p>If you're looking to book a top-notch comedian… yes, let's make this weirdly professional. Hit me up. I'll probably fix your swag zipper while I'm at it.</p>
+            <p>If you're looking to book a topnotch comedian… yes, let's make this weirdly professional. Hit me up.</p>
             </div>
         </div>
     </section>
 
-    <!--<section id="contact">
-    <div id="contact-placeholder">
-        <p>✅ Test: Contact section loaded.</p>
-    </div>
-    </section> -->
 
     <!-- Contact Section -->
     <section id="contact">
