--- a/contact.html
+++ b/contact.html
@@ -11,10 +11,8 @@
   <section id="contact" class="contact"> -->
     <div class="container">
       <h2>Contact</h2>
-      <p class="comedian-intro">
-        Book me for your next event, and I promise not to talk all about fishing, but I will embarrass myself at least twice. I may make it about my existential dread, but that's all part of the service.
-      </p> 
-
+      <p class="comedian-intro"> 
+        Book me for your next event, whether it's a sporting club, fishing club or something a little fancier. I've got jokes to suit.
       <div class="contact-content">
         <!-- Contact Info & Socials --> 
         <div class="contact-info">
@@ -71,7 +69,7 @@
           </form>
 
           <div class="form-footer">
-            <p>We'll get back to you within 24 hours</p>
+            <p>Cheers! Will get in touch soon</p>
           </div>
         </div>
       <!-- </div>
