trying to resolve this DS issue

--- a/contact.html
+++ b/contact.html
@@ -72,11 +72,11 @@
             <p>Cheers! Will get in touch soon</p>
           </div>
         </div>
-        
+
       <!-- </div>
     </div>
   </section>
 
   <script src="contact_test.js"></script>
 </body>
-</html>
+</html> -->
